<resources>
    <string name="app_name">Sri Lanka Bus Transit</string>
    <string name="description">Manage your Bus travels</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="Home">Home</string>
    <string name="Schedule">Schedule</string>
    <string name="History">Trip History</string>
    <string name="Balanace">Account Balance</string>
    <string name="Profile">Profile</string>
    <string name="Payment">Payment</string>
    <string name="Settings">Settings</string>


    <string name="StartTrip">Start Trip</string>
    <string name="location">Enter location</string>
    <string name="EndTrip">End Trip</string>
    <string name="destination">enter destination</string>

    <string name="title_activity_balance">Account Balance</string>
    <string name="title_activity_stop">End Trip</string>
    <string name="title_activity_travel">Traveling</string>
    <string name="title_activity_schedule">Schedules</string>
    <string name="title_activity_history">Trip History</string>
    <string name="title_activity_reset">activity_reset</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_activity_send_reset_code">SendResetCode</string>
    <string name="title_activity_change_package">ChangePackage</string>
    <string name="title_activity_package_details">PackageDetails</string>
</resources>
